# cpproj

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app1.cpp  app2.cpp
lib/: CMakeLists.txt  my_func1.cpp  my_func1.h  my_func2.cpp  my_func2.h
